# bunyan-rs

./: Cargo.toml  README.md  benchmark_js.sh  benchmark_rs.sh
src/: main.rs  record.rs  style.rs
src/sources/: stdin.rs
tests/all/: files.rs  main.rs  output.rs
