[package]
name = "bunyan-rs"
version = "0.1.0"
authors = ["hjrgrn <187955624+hjrgrn@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A CLI to pretty print structured logs. A Rust port of the original JavaScript bunyan CLI."
repository = "https://github.com/hjrgrn/bunyan-rs"
readme = "README.md"

[[bin]]
path = "src/main.rs"
name = "bunyan"

[lib]
path = "src/lib.rs"
name = "bunyan"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.137", features = ["preserve_order"] }
chrono = { version = "0.4.39", default-features = false, features = ["serde", "clock"] }
atty = "0.2.14"
colored = "3.0.0"
itertools = "0.14.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
