[package]
name = "bunyan-rs"
version = "0.1.0"
authors = ["hjrgrn <187955624+hjrgrn@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A CLI to pretty print structured logs. A Rust port of the original JavaScript bunyan CLI."
repository = "https://github.com/hjrgrn/bunyan-rs"
readme = "README.md"

[[bin]]
path = "src/main.rs"
name = "bunyan"

[lib]
path = "src/lib.rs"
name = "bunyan"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
anyhow = "1.0.96"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.139", features = ["preserve_order"] }
chrono = { version = "0.4.40", default-features = false, features = ["serde", "clock"] }
colored = "3.0.0"
itertools = "0.14.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
